src/test/deca/context/valid/sans_objet/cast_cont_02.deca
// Description:
//    Cast
//
// Resultats:
//
//
// Historique:
//    cree le 01/01/2023

{
   float a = 4;
   int b = (int) (a = 3);
}
