src/test/deca/context/invalid/arith_op_type_mismatch_01.deca
// Description:
//     Operation arithmetique avec des mauvais types.
//
// Resultats:
//    Ligne 11: Arithmetic operation type mismatch
//
// Historique:
//    cree le 01/01/2023

{
   int x = 4 + true;
}
